# lithuania-election-results

./: README.md  pyproject.toml  session_store.db
.viz/: stats.json
conf/base/: catalog.yml  parameters.yml
data/01_raw/: raw_scraped_data.parquet  raw_scraped_data.pkl
lithuania-election-results/: pyproject.toml
lithuania-election-results/src/lithuania_election_results/: __main__.py
notebooks/: analysis.ipynb  else.ipynb
src/lithuania_election_results/: __init__.py
src/lithuania_election_results/extras/: scraper.py
src/lithuania_election_results/pipelines/data_ingestion/: __init__.py  nodes.py  pipeline.py
